Refactor: Merged benchmarks to org.jscience.benchmark, fixed compilation errors, corrected Units.java temperature definitions. Note: GeometryTest still failing due to Vector2D.norm issue.